; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavutil/extr_mastering_display_metadata.c_av_content_light_metadata_create_side_data.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavutil/extr_mastering_display_metadata.c_av_content_light_metadata_create_side_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@AV_FRAME_DATA_CONTENT_LIGHT_LEVEL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @av_content_light_metadata_create_side_data(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load i32, i32* @AV_FRAME_DATA_CONTENT_LIGHT_LEVEL, align 4
  %7 = call %struct.TYPE_3__* @av_frame_new_side_data(i32* %5, i32 %6, i32 4)
  store %struct.TYPE_3__* %7, %struct.TYPE_3__** %4, align 8
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %9 = icmp ne %struct.TYPE_3__* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %20

11:                                               ; preds = %1
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = call i32 @memset(i64 %14, i32 0, i32 4)
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = inttoptr i64 %18 to i32*
  store i32* %19, i32** %2, align 8
  br label %20

20:                                               ; preds = %11, %10
  %21 = load i32*, i32** %2, align 8
  ret i32* %21
}

declare dso_local %struct.TYPE_3__* @av_frame_new_side_data(i32*, i32, i32) #1

declare dso_local i32 @memset(i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
